--- a/index.html
+++ b/index.html
@@ -6,26 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Saloon</title>
     <!-- STYLES -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
-    <header>
-      <h1>beauty saloon.</h1>
-      <div>...</div>
+    <header id="header">
+      <nav class="container">
+        <a class="logo" href="#">beauty<span>salon</span>.</a>
+        <div class="menu">...</div>
+      </nav>
     </header>
+
     <main>
-      <section>
-        <img
-          src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-          alt="Mulher sorrindo e penteando outra mulher"
-        />
-        <h1>Saúde natural para os seus cabelos</h1>
-        <p>
-          Um salão exclusivo em São Paulo, especializado em tratamentos
-          naturais.
-        </p>        
-        <a href="#">Agendar Horário</a>
+      <section class="section" id="home">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+              alt="Mulher sorrindo e penteando outra mulher"
+            />
+          </div>
+          <div class="text">
+            <h1>Saúde natural para os seus cabelos</h1>
+            <p>
+              Um salão exclusivo em São Paulo, especializado em tratamentos
+              naturais.
+            </p>
+            <a class="button" href="#">Agendar Horário</a>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-1"></div>
+      
+      <section class="section">
+        <div class="container"></div>
       </section>
     </main>
   </body>
