--- a/nlw/index.html
+++ b/nlw/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt_BR">
   <head>
+    <!-- PAGE INFO -->
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty Saloon</title>
+    <title>OriginSix</title>
 
-    <!-- ICONS -->
+    <!-- Icones -->
     <link rel="stylesheet" href="assets/fonts/style.css" />
 
-    <!-- SWIPER -->
+    <!-- Swiper -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -18,21 +18,18 @@
     <!-- STYLES -->
     <link rel="stylesheet" href="style.css" />
 
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
   </head>
-
   <body>
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon</span>.</a>
-
-        <!-- menu  -->
+        <!-- menu -->
         <div class="menu">
           <ul class="grid">
             <li><a class="title" href="#home">Início</a></li>
@@ -42,8 +39,7 @@
             <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
-        <!-- /menu  -->
-
+        <!-- /menu -->
         <div class="toggle icon-menu"></div>
         <div class="toggle icon-close"></div>
       </nav>
@@ -56,7 +52,7 @@
           <div class="image">
             <img
               src="https://images.unsplash.com/photo-1562322140-8baeececf3df?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MXx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-              alt="Mulher sorrindo e penteando outra mulher"
+              alt="Mulher sorrindo penteando outra mulher"
             />
           </div>
           <div class="text">
@@ -65,7 +61,7 @@
               Um salão exclusivo em São Paulo, especializado em tratamentos
               naturais.
             </p>
-            <a class="button" href="#contact">Agendar Horário</a>
+            <a class="button" href="#">Agendar um horário</a>
           </div>
         </div>
       </section>
@@ -78,28 +74,30 @@
           <div class="image">
             <img
               src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8aGFpcmRyZXNzZXJ8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-              alt="Três cabeleireiras sorrindo com tesoura e escova na mão "
+              alt="3 mulheres sorrindo"
             />
           </div>
           <div class="text">
             <h2 class="title">Sobre nós</h2>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Voluptatem, accusamus velit eaque rerum iusto commodi est ullam
-              optio ipsum, in ea, ipsam fuga voluptatum veniam illum neque saepe
-              sunt fugiat?
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
+              beatae dicta ducimus praesentium architecto harum dolorum
+              distinctio illo earum assumenda itaque. Omnis, quam repellat.
             </p>
+            <br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
-              blanditiis consectetur omnis nemo corrupti voluptate eum dolores
-              laborum rem ipsum minima, illum nihil expedita soluta, iste
-              inventore earum fugit nostrum?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+              illum ratione impedit quae eum quis adipisci asperiores, est
+              doloribus distinctio excepturi minima eius dolore! Perferendis
+              laborum illo aspernatur repellendus ipsum.
             </p>
+            <br />
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
-              fugit qui provident. Placeat id deleniti earum quos adipisci ullam
-              accusantium magni itaque, minus repellat beatae dolore dolores
-              saepe ratione nihil.
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
+              exercitationem, illum sapiente quasi hic iusto odio maiores esse
+              quaerat quis necessitatibus at odit, dolores dicta, officia ab
+              quos. Provident, quae.
             </p>
           </div>
         </div>
@@ -121,28 +119,29 @@
           <div class="cards grid">
             <div class="card">
               <i class="icon-woman-hair"></i>
-              <h3 class="title">Terapia Capilar</h3>
+              <h3 class="title">Terapia capilar</h3>
               <p>
-                Terapia completa para couro cabeludo e fios, protegendo todos os
-                tipos de cabelos, inclusive os longos e finos.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
-
             <div class="card">
               <i class="icon-trim"></i>
               <h3 class="title">Cortes</h3>
               <p>
-                A nossa equipe é repleta de profissionais renomados, famosos por
-                lançarem tendências com cortes diferenciados e clássicos.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
-
             <div class="card">
               <i class="icon-cosmetic"></i>
               <h3 class="title">Tratamentos</h3>
               <p>
-                O beautysalon conta com diversos tratamentos naturais e
-                totalmente veganos, para qualquer tipo de cabelo.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
+                distinctio neque blanditiis, dolorem aperiam nulla explicabo
+                asperiores
               </p>
             </div>
           </div>
@@ -152,66 +151,69 @@
       <div class="divider-1"></div>
 
       <!-- TESTIMONIALS -->
-
       <section class="section" id="testimonials">
-        <div class="cointainer">
+        <div class="container">
           <header>
             <h2 class="title">Depoimentos de quem já passou por aqui</h2>
           </header>
-
-          <div class="testemonials swiper-container">
+          <div class="testimonials swiper-container">
             <div class="swiper-wrapper">
-              <div class="testemonial swiper-slide">
+              <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Accusamus doloribus repellat, excepturi vero vel.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/68.jpg"
+                      src="assets/fotos/10.jpeg"
                       alt="Foto de Wanessa Souza"
                     />
-                    Vanessa Cabrini
+                    Wanessa Souza
                   </cite>
                 </blockquote>
               </div>
 
-              <div class="testemonial swiper-slide">
+              <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Accusamus doloribus repellat, excepturi vero vel.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/34.jpg"
-                      alt="Foto de Maria Green"
+                      src="assets/fotos/56.jpeg"
+                      alt="Foto de Franciele Venega"
                     />
-                    Maria Green
+                    Franciele Venega
                   </cite>
                 </blockquote>
               </div>
 
-              <div class="testemonial swiper-slide">
+              <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
                     <span>&ldquo;</span>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Accusamus doloribus repellat, excepturi vero vel.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
                   </p>
                   <cite>
                     <img
-                      src="https://randomuser.me/api/portraits/women/89.jpg"
-                      alt="Foto de Eva Indica"
+                      src="assets/fotos/26.jpeg"
+                      alt="Fotos de Valeska Fabris"
                     />
-                    Eva Indica
+                    Valeska Fabris
                   </cite>
                 </blockquote>
               </div>
             </div>
+
+            <!-- If we need pagination -->
             <div class="swiper-pagination"></div>
           </div>
         </div>
@@ -229,32 +231,31 @@
               ouvir suas críticas e sugestões.
             </p>
             <a
-              href="https://api.whatsapp.com/send?phone=+5581998765432"
+              href="https://api.whatsapp.com/send?phone=+5511998456754&text=Oi! Gostaria de agendar um horário"
               class="button"
               target="_blank"
+              ><i class="icon-whatsapp"></i> Entrar em contato</a
             >
-              <i class="icon-whatsapp"></i>Entrar em contato
-            </a>
           </div>
 
           <div class="links">
             <ul class="grid">
-              <li><i class="icon-phone"></i>11 99845-6754</li>
+              <li><i class="icon-phone"></i> 11 99845-6754</li>
               <li><i class="icon-map-pin"></i> R. Amauri Souza, 346</li>
-              <li><i class="icon-mail"></i>contato@beautysalon.com</li>
+              <li><i class="icon-mail"></i> contato@beautysalon.com</li>
             </ul>
           </div>
         </div>
       </section>
     </main>
 
-    <!-- SWIPER -->
+    <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-    <!-- ScrollReveal -->
+    <!-- scrollreveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
-    <!-- MAIN.js -->
+    <!-- main.js -->
     <script src="main.js"></script>
   </body>
 </html>
