Feature: construcao do footer e termino do style mobo
Finalizado style para dispositivos mobo, construção do footer e do botao de voltar ao topo.

--- a/assets/fonts/demo.html
+++ b/assets/fonts/demo.html
@@ -169,8 +169,8 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-chevrons-up"></span>
-                <span class="mls"> icon-chevrons-up</span>
+                <span class="icon-arrow-up"></span>
+                <span class="mls"> icon-arrow-up</span>
             </div>
             <fieldset class="fs0 size1of1 clearfix hidden-false">
                 <input type="text" readonly value="e90c" class="unit size1of2" />
