--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </div>
     </footer>
 
-    <a href="#home" class="back-to-top"><i class="icon-cevrons-up"></i></a>
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
 
     <!-- SWIPER -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
