--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
-        <!-- /menu  -->
-
+        <!--  fim menu  -->
         <div class="toggle icon-menu"></div>
         <div class="toggle icon-close"></div>
       </nav>
@@ -112,7 +111,7 @@
         <div class="container grid">
           <header>
             <h2 class="title">Serviços</h2>
-            <p>
+            <p class="subtitle">
               Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já
               conquistou clientes de inúmeros países com seus tratamentos
               exclusivos e totalmente naturais
@@ -258,7 +257,7 @@
           <p>©2021 Beautysalon.</p>
           <p>Todos os direitos reservados.</p>
         </div>
-        <div class="social">
+        <div class="social grid">
           <a href="https://instagram.com" target="_blank"
             ><i class="icon-instagram"></i
           ></a>
